fix(cars): force stacked specs to wrap value to next line

--- a/local/templates/fors/assets/css/pages/cars.css
+++ b/local/templates/fors/assets/css/pages/cars.css
@@ -177,7 +177,8 @@
 }
 
 .cars-gallery__spec-item--stack dd {
-  flex-basis: 100%;
+  flex: 0 0 100%;
+  margin-top: 0.1rem;
 }
 
 .cars-gallery__divider {
